# verl

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  BSD_LICENSE  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ENHANCED_REWARD_API_PR.md  FORK_MAINTENANCE.md  MONOREPO_SUBMODULE_GUIDE.md  Notice.txt  PR_MESSAGE.md  README.md  REQUEST.md  ROLLOUT_IS_MIGRATION.md  VERL_INTEGRATION_GUIDE.md  arc_vision_requirements.txt  debug.py  diff.txt  docker_run_rocm.sh  docstring_checker.py  environment.yml  fusion_result.json  inspect_reflection.py  install.sh  launch_math_rl.py  mem.pickle  multinode_sglang.sh  naive_run_qwen3_06b.sh  npu-turtorial.md  opd_impl_plan.md  output.txt  over_sample.sh  over_sample_enhanced.sh  pprofile-sglang-multi-turn.sh  (+50 more)
atropos/: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  README.md  README_WEIGHTED_SFT.md  SLURM.md  atropos_sft_interface.py  example_integration.py  llms.txt  pyproject.toml  pytest.ini  requirements.txt
atropos/.github/: pull_request_template.md
atropos/.github/ISSUE_TEMPLATE/: bug_report.md
atropos/.github/workflows/: upload_to_pypi.yml
atropos/atroposlib/: FAQ.md  type_definitions.py
atropos/atroposlib/api/: README.md  env_interaction.md  server.py  trainer_interaction.md  utils.py
atropos/atroposlib/cli/: dpo.py  inference_node_wandb_watcher.py  run_api.py  sft.py  view_run.py  view_run_multimodal.py
atropos/atroposlib/envs/: README.md  base.py  constants.py
atropos/atroposlib/envs/reward_fns/: __init__.py  accuracy_reward.py  cascading_r1_math_reward.py  chandas_meter_reward.py  combined_reward.py  cosine_scaled_reward.py  crossword_format_reward.py  format_reward.py  r1_reward.py  reasoning_steps_reward.py  registry.py  repetition_penalty_reward.py  reward_function.py
atropos/atroposlib/envs/server_handling/: openai_server.py  server_baseline.py  server_harness.py  server_manager.py  trl_vllm_server.py
atropos/atroposlib/frontend/: jsonl2html.py  template.html
atropos/atroposlib/tests/: conftest.py  test_advantages.py  test_openai_api_workarounds.py
atropos/atroposlib/tests/test_utils/: test_heterogeneous_batching.py
atropos/atroposlib/utils/: __init__.py  advantages.py  best_of_n_selection.py  cli.py  config_handler.py  force_diverse_samples.py  io.py  message_history_utils.py  metrics.py  tokenize_for_trainer.py  tool_call_parser.py
atropos/environments/: README.md  fundamental_prediction_environment.py  gsm8k_server.py  gsm8k_server_axolotl.py  instruction_following_algorithm_environment.py  math_server.py  math_server_zero.py  mcp_env.py  mcqa_thinking_env.py  rlaif_server.py  sft_loader_server.py  swe_rl_env.py  tool_calling_server.py  weighted_sft_environment.py
atropos/environments/code_execution_server/: Dockerfile  coding_server.py  server.py
atropos/environments/community/: README.md  philosophical_rlaif_env.py  playwright_agent_env.py
atropos/environments/community/accessibility_env/: README.md  accessibility_env.py  accessibility_rules.py  requirements.txt
atropos/environments/community/cat_behavior_env/: README.md  cat_server.py  catbot_arena.py
atropos/environments/community/conversational_style_dpo/: conversational_style_dpo_env.py  gsmk8k_conversational_style_dpo_env.py  requirements.txt  (+1 more)
atropos/environments/configs/: example.yaml
atropos/environments/dataset_environment/: LOCAL_TESTING.md  README.md  __init__.py  dataset_env.py  dataset_local_server.py  launch_local_dataset_run.py
atropos/environments/infinimath/: README.md  __init__.py  curriculum.py  infinimath.py  infinimath_env.py  infinimath_local_server.py
atropos/environments/intern_bootcamp/: README.md  __init__.py  bootcamp_registry.py  intern_bootcamp_env.py  intern_bootcamp_local_test.py  run_intern_bootcamp.py
atropos/environments/kernelbench_env/: README.md  kernelbench_env.py
atropos/environments/multimodal_dpo/: clevr_cogen_a_train.py  clevr_complex.py  ocr_vqa.py  pixmo_clocks.py  pixmo_count.py  pixmo_point_explanations.py
atropos/example_trainer/: README.md  __init__.py  grpo.py  requirements.txt  weighted_sft_trainer.py
atropos/helpers/: length_penalties.py
atropos/testing/: testing.md
atropos/testing/api/: testing.py  utils.py
atropos/testing/utils/: test_tokenize_for_trainer.py
atropos/tests/: test_weighted_sft_interface.py
(+5250 files in other folders)
